--- a/app/src/main/res/layout/fragment_fim_live.xml
+++ b/app/src/main/res/layout/fragment_fim_live.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/bg_light_gray"
-    android:layout_height="match_parent">
-
+    android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/id_swiperefreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <!--
          app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -19,14 +18,12 @@
         -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:foregroundGravity="center"
-            />
-
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:foregroundGravity="center" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
