--- a/app/src/main/res/layout/activity_view_footer.xml
+++ b/app/src/main/res/layout/activity_view_footer.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:background="@color/bg_light_gray"
-    android:orientation="vertical" >
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:background="@color/bg_light_gray"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center" />
-
-        <TextView
-            android:id="@+id/tv_load_prompt"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="加载更多..."
-            android:textSize="12sp" />
-    </LinearLayout>
+            android:layout_width="wrap_content"
+            android:orientation="horizontal">
 
-</LinearLayout>
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_gravity="center"
+                android:layout_height="20dp"
+                android:layout_width="20dp" />
+
+            <TextView
+                android:id="@+id/tv_load_prompt"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:text="加载更多..."
+                android:textSize="12sp" />
+        </LinearLayout>
+
+    </LinearLayout>
+</layout>
